[gd_scene load_steps=12 format=3 uid="uid://cbhc564a8a6e"]

[ext_resource type="Script" path="res://src/scenes/game.gd" id="1_njila"]
[ext_resource type="Script" path="res://src/controls/player_sensor.gd" id="4_8ttyi"]
[ext_resource type="Script" path="res://src/info_label.gd" id="4_shxdo"]
[ext_resource type="PackedScene" path="res://src/scenes/menus/game_over_menu.tscn" id="5_2syq0"]
[ext_resource type="Script" path="res://src/controls/shoot_sensor.gd" id="5_ysdi3"]
[ext_resource type="PackedScene" uid="uid://cjk1sxt21gprp" path="res://src/scenes/menus/pause_menu.tscn" id="6_d8b13"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wbvkj"]
b = Vector2(100, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_r6n8m"]
a = Vector2(100, 0)
b = Vector2(100, 100)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_p3ter"]
a = Vector2(100, 100)
b = Vector2(0, 100)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_q0vek"]
b = Vector2(0, 100)

[sub_resource type="LabelSettings" id="LabelSettings_aavuu"]
font_size = 30

[node name="GameScene" type="Node2D" node_paths=PackedStringArray("bounds", "bounds_top", "bounds_right", "bounds_bottom", "bounds_left", "segments", "enemies", "player_sensor", "shoot_sensor", "info_label", "game_over_menu", "pause_menu", "black_color_rect")]
process_mode = 1
script = ExtResource("1_njila")
bounds = NodePath("Level/Bounds")
bounds_top = NodePath("Level/Bounds/Top")
bounds_right = NodePath("Level/Bounds/Right")
bounds_bottom = NodePath("Level/Bounds/Bottom")
bounds_left = NodePath("Level/Bounds/Left")
segments = NodePath("Level/Segments")
enemies = NodePath("Level/Enemies")
player_sensor = NodePath("PlayerSensor")
shoot_sensor = NodePath("ShootSensor")
info_label = NodePath("HUD/InfoLabel")
game_over_menu = NodePath("HUD/GameOverMenu")
pause_menu = NodePath("HUD/PauseMenu")
black_color_rect = NodePath("HUD/BlackColorRect")

[node name="Level" type="Node2D" parent="."]

[node name="Bounds" type="StaticBody2D" parent="Level"]

[node name="Top" type="CollisionShape2D" parent="Level/Bounds"]
shape = SubResource("SegmentShape2D_wbvkj")

[node name="Right" type="CollisionShape2D" parent="Level/Bounds"]
shape = SubResource("SegmentShape2D_r6n8m")

[node name="Bottom" type="CollisionShape2D" parent="Level/Bounds"]
shape = SubResource("SegmentShape2D_p3ter")

[node name="Left" type="CollisionShape2D" parent="Level/Bounds"]
shape = SubResource("SegmentShape2D_q0vek")

[node name="Segments" type="Node2D" parent="Level"]

[node name="Enemies" type="Node2D" parent="Level"]

[node name="ShootField" type="Node2D" parent="Level"]

[node name="PlayerSensor" type="Marker2D" parent="."]
gizmo_extents = 100.0
script = ExtResource("4_8ttyi")

[node name="ShootSensor" type="Marker2D" parent="."]
position = Vector2(960, 0)
gizmo_extents = 100.0
script = ExtResource("5_ysdi3")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
text = "100"
label_settings = SubResource("LabelSettings_aavuu")
script = ExtResource("4_shxdo")
metadata/_edit_lock_ = true

[node name="GameOverMenu" parent="HUD" instance=ExtResource("5_2syq0")]
visible = false

[node name="PauseMenu" parent="HUD" instance=ExtResource("6_d8b13")]
visible = false

[node name="BlackColorRect" type="ColorRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true
